--- a/src/renderer/vulkan/CMakeLists.txt
+++ b/src/renderer/vulkan/CMakeLists.txt
@@ -9,6 +9,7 @@ add_library(${MODULE} STATIC
 target_include_directories(${MODULE} PUBLIC
 	${CMAKE_CURRENT_SOURCE_DIR}
   ${Vulkan_INCLUDE_DIRS}
+  ${Stb_INCLUDE_DIR}
 )
 
 target_link_libraries(${MODULE} PUBLIC 
